# vortex-messenger

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  idée.txt
client/: CMakeLists.txt
client/deploy/: deploy.sh  ressourceFile.sh
client/include/: canal_handler.hpp  client.hpp  crypted_msg.hpp  message_handler.hpp  message_manager.hpp  network.hpp  queu_manager.hpp  responseToServerStruct.hpp  rsa_encryption.hpp  secure_server_communicator.hpp  universal_structs_client.hpp  user_controller.h
client/include/ui/: add_conversation_window.h  auth_page.h  home_page.h  main_window.h  title_bar.h
client/include/ui/page_type/: index.h  private_message_ui.h  room_ui.h  settings_message_ui.h
client/src/: canal_handler.cpp  client.cpp  crypted_msg.cpp  main.cpp  message_handler.cpp  message_manager.cpp  network.cpp  queu_manager.cpp  rsa_encryption.cpp  secure_server_communicator.cpp  user_controller.cpp
client/src/ui/: add_conversation_window.cpp  auth_page.cpp  home_page.cpp  main_window.cpp  title_bar.cpp
client/src/ui/page_type/: index.cpp  private_message_ui.cpp  room_ui.cpp  settings_message_ui.cpp
key/: key  key.s
server/: CMakeLists.txt  Dockerfile
server/include/: client_data.hpp  client_queue_thread_pool.hpp  command.hpp  define.hpp  poller.hpp  responseToClientStruct.hpp  rooms.hpp  rsa_encryption.hpp  secure_server_communicator.hpp  server.hpp  universal_structs_server.hpp  user_manager.hpp
server/script/: functions_to_include.txt  linkOpCodeAddr.sh  opcodes.def
server/src/: client_queue_thread_pool.cpp  main.cpp  rooms.cpp  rsa_encryption.cpp  secure_server_communicator.cpp  server.cpp  user_manager.cpp
server/src/command/: auth.cpp  chrp.cpp  command.cpp  crea.cpp  deco.cpp  jnmp.cpp  mpms.cpp  sack.cpp  sdpk.cpp  sjmp.cpp
server/src/opcode/: opcode.s
vortex-messenger/: index.html  styles.css
